--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -205,13 +205,13 @@ Table 6.x. Learning dimensions facilitated by this study's game making process
 
 The map of learning dimensions above includes a balance of skills, concrete and more abstract aspects of coding concepts [^ld]. The creation of a provision of these learning dimensions aims as a supporting resource aimed to help future teachers and facilitors locate curricular value within the game making process and to to address tensions in the integration of concepts into an complex making process. The approach specifically addresses a paradox common in application project-based approaches in more formal settings, the tension between the an exploratory learning approach and a possibility or need to align with curricular concepts [@hoyles_pedagogy_1992]. I propose that this tension, named the _play paradox_ by Hoyles and colleagues [-@hoyles_pedagogy_1992], can be addressed by orienting the learning map to follow a leading activity of the learning design aligned with the goals of the participants, in this case to add GDPs to the game.  
 
-COME BACK TO THIS - HOW WHAT DOES THIS MEAN?
+<!-- COME BACK TO THIS - HOW WHAT DOES THIS MEAN? -->
 
 However, in this informal learning context, the overall motivation of participants was on having fun while making an engaging game together rather than explicitly developing to knowledge linked to the computing curriculum, reflected in the overall orientation of this thesis. In this context, the play paradox is less extreme and  my approach to the learning design, facilitation and to the methodology of this study reflects this.   
 
 **Summary**
 
-In summary, this section has provided a selected overview of examples of the personal appropriation of knowledge and processs  being  driven by the implementation of GDPs. The observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes. The map of learning dimensions that emerged from inductive and deductive stages of thematic analysis presented in Table 6.x contains within it indications of tensions related to abstract and concrete aspects of knowledge at play within the implementation of GDPs which are beyond the remit of this section but which are explored in Chapter 7. 
+In summary, this section has provided a selected overview of examples of the personal appropriation of knowledge and processs  being  driven by the implementation of GDPs. The observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes. The map of learning dimensions that emerged from inductive and deductive stages of thematic analysis presented in Table 6.x contains within it indications of tensions related to abstract and concrete aspects of knowledge at play within the implementation of GDPs which are beyond the remit of this section but which are explored in Chapter 7.
 
 **Signposting to fuller exploration of resolving play paradox in Appendix D.? and in Chapter 7.**
 
@@ -356,11 +356,11 @@ Commentary: Brief theoretical reflection or methodological note
 Bridge or close: One-line takeaway or link to next section -->
 
 
-In this section, I outline findings on the use of the use of GDPs within the group to mediate the process of accessing and using project project documentation.
+In this section, I outline findings on the use of the use of GDPs within the group to mediate the process of accessing and using project project documentation. Chapter 5 described the introduction of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures.
 
-Chapter 5 described the introduction of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. My design input here can be seen through the lens of Rogoff's  [@rogoff_observing_1995] three planes interpretation as a form of guided participation [^cgp]. (DEVELOP SLIGHTLY OR DROP)
+<!-- My design input here can be seen through the lens of Rogoff's  [@rogoff_observing_1995] three planes interpretation as a form of guided participation [^cgp]. (DEVELOP SLIGHTLY OR DROP) -->
 
-The following extract from Vignette 2 concerns a family that had taken a methodical approach to accessing documentation. In the minutes leading up to extract, Susanna (parent) attempting to implement a key and door mechanic to the game. Meanwhile Tehillah (child), unable to do such coding or debugging, expressed boredom [^kd]. Susanna(p) [^ip] had been following the step-by-step written instructions but when Susanna had not been able to progress, she sent Tehillah(c) to get my help and I worked with her to find the problem.
+The following extract from Vignette 2 concerns a family that had taken a methodical approach to accessing documentation. In the minutes leading up to extract, Susanna (parent) attempting to implement a key and door mechanic to the game. Meanwhile Tehillah (child), unable to do such coding or debugging, expressed boredom [^kd]. Susanna(p)[^ip] had been following the step-by-step written instructions but when Susanna had not been able to progress, she sent Tehillah(c) to get my help and I worked with the parent closely to find the coding syntax problem.
 
 | **Dialogue** | **Activity** |
 |--------------|--------------|
@@ -379,22 +379,18 @@ ADD IN IMAGE
 
 **Table 6.x** – Extract of Vignette 2 showing interpersonal interaction and documentation use.
 
-Vignette 2 follows the parent Susanna's use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, is limited in her programming skills but avoids seeking facilitator or peer help [^fh]. As such, she  independently accesses written step-by-step instructions as a preferred working approach. Susanna leads the process implementing code changes of patterns chosen by her daughter [^si]. In this way the pair are able to use the concept of the key and door pattern to help coordinate their project organisation access relevant documentation.
+Vignette 2 follows the parent Susanna's use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, is limited in her programming skills but avoids seeking facilitator or peer help[^fh]. As such, she  independently accesses written step-by-step instructions as a preferred working approach. Susanna leads the process implementing code changes of patterns chosen by her daughter[^si]. In this way the pair are able to use the concept of the key and door pattern to help coordinate their project organisation access relevant documentation. To prioritise participant engagement, supporting documentation avoided a principles-first instruction approach (either to the whole group or to individuals). The use of shorter, just-in-time tutorials was in responses to barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020].
 
-To prioritise participant engagement, supporting documentation avoided a principles-first instruction approach (either to the whole group or to individuals). The use of shorter, just-in-time tutorials was in responses to barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020].
+This choice provided over which pattern to implement appears to have a positive impact on affect both in the context of this vignette and more generally. Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game. Her positive reaction in the vignette above, including the naming and rhythmical chanting of “key” and “door,” indicates affective engagement closely tied to her interaction with the GDP concept. There is also evidence of affective engagement in Toby's laughter and calling out to his Granny when getting unexpected results.
 
-This choice provided over which pattern to implement appears to have a positive impact on affect. Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game. Her positive reaction in the vignette above, including the naming and rhythmical chanting of “key” and “door,” indicates affective engagement closely tied to her interaction with the GDP concept. There is also evidence of affective engagement in Toby's laughter and calling out to his Granny when getting unexpected results.
-
-While both forms of documentation following the structure of close coupling between impact and that is core to the use of design patterns in computing education [@gamma_design_1995], this decision resulted in varied patterns of use.  I provided participants with a choice of supporting documentation in the form of both step-by-step instructions and code snippets. In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting code snippets directly. Thus in contrast to Vignette 2, he does not access the step by step instructions.
-
-
+I provided participants with a choice of supporting documentation in the form of both step-by-step instructions and code snippets (see Chapter 5). While both forms of documentation follow a structure of close coupling between impact and that is core to the use of design patterns in computing education [@gamma_design_1995], this decision resulted in varied patterns of use. In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting code snippets directly. In contrast to Vignette 2, he does not access the step by step instructions.
 
 <!-- Later Toby is able to assist others in adding GDPs to their games [^rc2]. POTENTIALLY DROP THIS / MOVE -->
-**Commentary**
+<!-- **Commentary** -->
 
 While the evidence outlined supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engaged with the menu of . For example, some participants learn to implement GDPs from peers, a process explored in a later section. Additionally, in Vignette 3, we see Ed lets his father take the lead in accessing documentation.  Secondly, because the GDP menu (and concepts) were introduced by myself as a navigational and organisational tool for use by participants, it seems logical that participants should use them for that purpose. The danger here is of circular reasoning in methodology which needs to be borne in mind when assessing the scope of this research [^gp]. Despite these clarifications, the data clearly shows the utility of the menu of GDPs to directly help some participants, a clear example of just-in-time documentation supporting participant-led learning and as a foundational source for the later propagation and evolution of GDP practices by participants.
 
-These observations extends current research in this area in relation to the promising work on computational thinking patterns within the scalable game design (SGD) programme. The structure of SGD and supporting resources was oriented around  the motivation of transferability of science simulation concepts (in pattern form) to other science disciplines. By way of contrast, in my research the motivation is to align the structure documentation to the choices of desired game features made by earlier iterations of participants. In this way project navigation increasing the relatability of the patterns at play. The use of gameplay design patterns [^gpdp] facilitates a tangible coupling between the participant experience of the pattern and the process of implementing it.
+These observations extends current research in this area in relation to the promising work on computational thinking patterns within the scalable game design (SGD) programme [@repenning_scalable_2015]. The structure of SGD and supporting resources was oriented around  the motivation of transferability of science simulation concepts (in pattern form) to other science disciplines. By way of contrast, in my research the motivation is to align the structure documentation to the choices of desired game features made by earlier iterations of participants. In this way project navigation increasing the relatability of the patterns at play. The use of gameplay design patterns [^gpdp] facilitates a tangible coupling between the participant experience of the pattern and the process of implementing it.
 
 
 ### GDPs used to scaffold ideation and prioritisation processes
@@ -402,15 +398,12 @@ These observations extends current research in this area in relation to the prom
 <!-- Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities. -->
 <!-- NOTE - ADD MORE ON GESTURING  -->
 
-This section outlines how the use of GDP concepts and supporting tools were used in ideation and project organisation. The impact of the provision of the starter game template and menu of GDPs outlined in Chapter 5 changed the nature of the ideation phase by providing scaffolding and restricting choice.
+This section outlines how the use of GDP concepts and supporting resources structure around GDPs were used in ideation and project organisation. The impact of the provision of the starter game template and menu of GDPs outlined in Chapter 5 changed the nature of the ideation phase by providing technical scaffolding and a limiting structure to particpant design choices.
 
 
-An exchange from Vignette 3 between participants Ed(c) and Mark(p) shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work more systematically. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). Mark becomes _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_." [^v3]
+An exchange from Vignette 3 between participants Ed(c) and Mark(p) shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work more systematically. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). Mark becomes _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_."[^v3] This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. In a session in P3, Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning [^v6].
 
-This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. In a session in P3, Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning [^v6].
-
-Other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs [^pp].
-
+Other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor,  delete, adn backspace keys to edit a matrix allowing level design. In response, the parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs [^pp].
 
 The following exchange (Table 6.x) captures a moment where the GDP concepts are used to structure a ideation proposing a more radical change of underlying game genre.
 
@@ -426,11 +419,9 @@ The following exchange (Table 6.x) captures a moment where the GDP concepts are 
 | Toby: Hmm. How should I do this then?<br>Dan: That’s a good question. Shall we ask Mick to see if that would mess things up or not? |  |
 
 
-**Commentary**
+In the vignette extract above, Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas using home-based knowledge of GDP mechanics within this interpersonal plane. Dan draws on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to discuss breaking out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
 
-In the vignette extract above, home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan draws on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
-
-The use of GDPs as a lingua franca as proposed by Erickson [-@erickson_lingua_2000] and Erikisson [-@eriksson_using_2019] (two different researchers) who detail the verbal use of GDP terms by participants in a collaborative design process. The observations of this section support the proposals of the  utility of collective, emergent use of pattern languages within communities working on projects. Here, they show specfically the potential for GDPs to be within ideation, prioritisation and clarification. In addition they show that as well as a verbal lingua franca, GDPs can be a valuable component of gestural interaction, and visually-oriented prototyping tools, be they digital or paper based.
+The use of GDPs as a lingua franca as proposed by Erickson [-@erickson_lingua_2000] and Erikisson [-@eriksson_using_2019] (two different researchers) who detail the verbal use of GDP terms by participants in a collaborative design process. (BOTH?) The observations of this section support the proposals of the utility of collective, emergent use of pattern languages within communities working on projects. Here, they show specfically the potential for GDPs to be within ideation, prioritisation and clarification. In addition they show that as well as a verbal lingua franca, GDPs can be a valuable component of gestural interaction, and visually-oriented prototyping tools, be they digital or paper based.
 
 <!-- IS SOME SYNTHESIS NEEDED TO END THIS SECTION? -->
 
@@ -467,31 +458,26 @@ CHECK FOR OVERLAP-->
 <!-- NOTE  dol and identities.
 Skills to perform these activities were at often distributed between different family members. For some adult re-enforcing their identities as project managers, and for young participants forming identities as digital specialists.  -->
 
-I now turn to the use of GDPs within processes of division of labour, a process which as in the previous section involved their use in an emergent form of communication to construct shared language and understanding [@erickson_lingua_2000].  As with previous sections, I begin with data in the form of vignette extracts and additional description and proceed to commentary and discussion in relation to relevant research.
-
+I now turn to the use of GDPs within processes of division of labour, a process which as in the previous section, involved their use in an emergent form of communication to construct shared language and understanding [@erickson_lingua_2000]. I begin with data in the form of several vignette extracts and additional description in sucession before proceeding to commentary and discussion.
 <!-- The examples below illustrate part of some of the varied strategies to divide labour adopted by participants at times involving complex tensions in activity.  -->
 
-Susanna(p) and Tehillah(c) relied on the parent to do the majority of code implementation but shared one computer. The parent took a lead on many activities but took care that they alternated between use of keyboard and mouse to give the child hands on experience when possible, particularly in level design activities and playtesting [^st1]. In interview data, the parent notes _"I resist the urge to fix things immediately when she struggles."_  Another exchange from Vignette 2 is described below.  
+Susanna(p) and Tehillah(c) working process relied on the parent to do the majority of code implementation on one shared one computer. The parent took a lead on many activities but took care that the pair alternated between use of keyboard and mouse. This provided the child  with hands-on experience when possible, particularly in level design activities and playtesting [^st1]. In interview data, the parent notes _"I resist the urge to fix things immediately when she (Tehillah(c)) struggles."_  Another exchange from Vignette 2 is described below.  
 
-    Tehillah(c) uses the name of a GDP within a request for her parent to take on a specific task within their making process, "Go on then. Key-Door person." When the parent expresses confusion about what this stateent means, Tehillah gestures with her hands to indicate that her mother is the person she is referring to. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother.
+    Tehillah(c) uses the name of a GDP within a request for her parent to take on a specific task within their making process, "Go on then. Key-Door person." When the parent expresses confusion about what this statment means, Tehillah gestures with her hands to indicate that her mother is the person she is referring to. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother.
 
-At times Susanna asked Tehillah to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times Tehillah engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
+At times, Susanna asked Tehillah to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. Tehillah  also carried out more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
 
-
-Toby adopts different working arrangements dependent on which family members he attends with. In P1, his mother worried she had abandoned him as she worked on the game code while he concentrated on graphical assets. In P2 Toby had created his own game, coding mostly alone but situated next to his grandparents who provided attention and support (see Vignette 1). In P3, he worked in a close pairing with his father (Dan) in closely guided practice (see Vignette 6 and shorter extract as Table 6.x above). Toby and Dan's pair process is more guided and focused than many other participants and includes accessing professional documentation and Dan guiding Toby in exploration of computational thinking concepts [^eg6]. Analysis of the interaction in the session of Vingette 6 shows an emerging pattern.
+Toby adopted different working arrangements dependent on which family members he attended with. In P1, his mother worried she had abandoned him as she worked on the game code while he concentrated on graphical assets (where in evidence?). In P2 Toby had created his own game, coding mostly alone but situated next to his grandparents who provided attention and support (see Vignette 1). In P3, he worked in a pair with his father (Dan) in closely guided practice (see Vignette 6 and shorter extract as Table 6.x above). Toby and Dan's pair process was more guided and focused than many other participants and includes accessing professional documentation and Dan guiding Toby in exploration of computational thinking concepts [^eg6]. Analysis of the interaction in the session of Vingette 6 shows an emerging pattern.
 
     Dan (p) starts as a facilitator, taking a lead from the direction of the child. As Toby(c) reaches the limits of their ability, he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
-
 
 Madiha's(p) family Nasrin(c) and Zidane(c) are all working on separate games on different computers. While Madiha sits next to Zidane who needs closer support, Nasrin often sits close by but next to a friend. The following is and extract from  Vignette 5,
 
     Madiha calls across the room to draw on Nasrin's help to correct a design mistake.  Nasrin appears reluctant to explain the technical processes she uses to help her mother:  "Madiha (to Nasrin): What are you doing? You have to tell me what you are doing so I can do it myself." Nasrin undertakes a process of using the graphical editing tool. "Madiha: How did you do that so quickly? I’ve got to like, carefully..." As she speaks, Madiha makes hand gestures to show a sense of hesitant keyboard use. In response, Nasrin bounces up in place and smiles broadly.
 
-Madiha and Nasrin reversed the traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPs but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
+Madiha(p) and Nasrin(c) at times reversed the parent helping child relationship. On request, Nasrin would reluctantly carry out the required technical elements of GDPs implementation on the parents game code. However, she would not explain the process of the changes needed, seemingly enjoying the power of knowing something that her mother didn't. Vignette 5 shows Madiha(p) building an emerging identity as a graphical asset designer, compared to other coding tasks, this is something that she does want to build her competency in. Nasrin affects reluctance in her support of her mother, but at other times shows that she enjoys her status of technical supporter (see reflective commentary in Vignette).
 
-Vignette 5 shows Madiha(p) building an emerging identity as a graphical asset designer, compared to other coding tasks, this is something that she does want to build her competency in. Nasrin affects reluctance in her support of her mother, but at other times shows that she enjoys her status of technical supporter (see reflective commentary in Vignette).
-
-In Vignette 3, Mark(p) and Ed(c) break out of a dysfunctional division of labour in the penultimate P2 session [^pl].  
+In Vignette 3, Mark(p) and Ed(c) break out of a dysfunctional division of labour in the penultimate session of P2 [^pl].  
 
     For much of the first part of the session Mark takes a significant amount of time puzzling over documentation on how to add animation to a character. He reads aloud from documentation. "Mark:. In the create function...". He breaks off to comment on the difficulty involved. "Mark: Quite complicated. But we can do it. But it would mean a lot of mucking around....It’s like a project in itself really."  Ed is left inactive and seemingly address this tension child proposes dividing their labour and working on two separate computers. Ed points to the cupboard in which laptop computers are kept and comments. "Ed(c): Why don’t you go there for a computer and you can do that?"  Mark(p): Why? What? While you’re doing what? Ed: Um making a sound track or something. I could do something like that." Mark fetches a new computer to continue his focused research but soon joins in Ed's exploration of sound-making software. They start a process of tinkering and messing about with the capability of music-making tools in a way that spurs creativity.
 
@@ -891,7 +877,7 @@ This chapter has begun to address Research Question 2, which asked how a collect
 
 [^kd]: The support for the key and door pattern is here. https://3m.flossmanuals.net/#game-mechanic-keys-and-doors
 
-[^cgp]: Clarify guided the form of guided participation.
+<!-- [^cgp]: Clarify guided the form of guided participation. -->
 
 [^ip]: Where unclear, in this writing, the name of the parent is followd by a (p) and that of the child by a (c). For example, Susanna(p) and Tehillah(c).
 
